# 5ghoul-5g-nr-attacks

./: .clang-format  .dockerignore  .gdbinit  .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Modules.cmake  PreLoad.cmake  README.md  SUMMARY.md  build.sh  container.sh  imgui.ini  package-lock.json  package.json  release.sh  requirements.sh  version.json
bindings/go/: example.go
bindings/python/: example_decoding.py  example_packet_labeling.py  example_state_machine.py  wdissector.i
configs/: 5gnr_gnb_config.json  global_config.json
configs/5gnr_gnb/: gnb.conf  n66.106.conf  n78.106.conf  n78.133.conf  open5gs.yaml  rfsim.n78.106.conf  ue.conf
docs/figures/: interception-diagram.drawio  interception-script.drawio  protocol-stack-5g.drawio
examples/pcap_merging/: ble_config_pairing.json
examples/states_modification/: 1.pairing_no_sc_original.json  2.pairing_no_sc_modified.json
examples/wdmapper/: config_4g.json  config_5g.json  config_amqp.json  config_ble_gatt.json  config_bt.json  config_coap.json  config_wifi_ap.json  run_example_wdmapper.sh
libs/: NanoLog.cpp  NanoLog.hpp  README.md  fast_vector.hpp  fmt.patch  json.hpp  log_misc_utils.hpp  mv_average.hpp  profiling.c  profiling.h  shm_client.c  shm_server.c  strtk.hpp  termcolor.hpp  tinydir.h  veque.hpp  whereami.c  wireshark.patch
libs/PcapPlusPlus/: CMakeLists.txt
libs/cef-cmake/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
libs/cef-cmake/cef-cmake/: cmake_install.cmake
libs/cef-cmake/cmake/: cef_cmake.cmake
libs/cef-cmake/res/win/: cef.exe.manifest  compatibility.manifest
libs/cxxopts/: cxxopts.hpp
libs/dynalo/: .gitignore  CMakeLists.txt  LICENSE  README.md
libs/dynalo/cmake/: Config.cmake
libs/dynalo/include/dynalo/: dynalo.hpp
libs/dynalo/include/dynalo/detail/: config.hpp
libs/dynalo/include/dynalo/detail/linux/: dynalo.hpp
libs/dynalo/include/dynalo/detail/windows/: dynalo.hpp
libs/gvpp/: .gitignore  CMakeLists.txt  LICENSE  README.md  gvpp.cpp  gvpp.hpp
libs/imgui/: README.md  imgui.h  imgui_memory_editor.hpp  imguial_term.cpp  imguial_term.h  stb_image.cpp  stb_image.h
libs/libmpsse/: .gitignore  README.md  build.sh  mpsse.h  mpsse_config.h
libs/libmpsse/src/: Makefile.am  config.h.in  configure.ac  fast.c  mpsse.c  mpsse.h  mpsse.i  mpsse.py  support.c  support.h
libs/libmpsse/src/examples/: Makefile.am  bitbang.c  bitbang.py  ds1305.c  ds1305.py  gpio.c  gpio.py  hist_best_yield.txt  hist_core.txt  i2ceeprom.c  i2ceeprom.py  spiflash.c  spiflash.py  spiflashfast.c
libs/react-cpp/: .gitignore  CMakeLists.txt  README.md  reactcpp.h
libs/react-cpp/include/: deferred.h  exception.h  fd.h  fullpipe.h  loop.h  loopreference.h  mainloop.h  pipe.h  process.h  readpipe.h  timeval.h  types.h  uint128_t.h  watcher.h  worker.h  writepipe.h
libs/react-cpp/include/dns/: base.h  channel.h  iprecord.h  mxrecord.h  mxresult.h  resolver.h  types.h
libs/react-cpp/include/net/: address.h  ip.h  ipv4.h  ipv6.h
libs/react-cpp/include/tcp/: address.h  buffer.h  connection.h  exception.h  in.h  out.h  peeraddress.h  server.h  socket.h  socketaddress.h  types.h
libs/react-cpp/include/watchers/: cleanup.h  interval.h  read.h  signal.h  status.h  synchronize.h  timeout.h  write.h
libs/react-cpp/libev/: .gitignore  CMakeLists.txt  CMakeMacroLibtoolFile.cmake  README.md  config.h.cmakein  ev.c  ev.pod  evconfig.h  event.h  import_cvs
libs/react-cpp/src/: includes.h  loop.cpp  loopworkerimpl.h  mainloop.cpp  process.cpp  shared.h  threadworkerimpl.h  uint128_t.cpp  worker.cpp  workerimpl.h
libs/react-cpp/src/dns/: base.cpp  channel.cpp  ipallresult.h  iprequest.h  ipv4result.h  ipv6result.h  mxrequest.h  request.h  resolver.cpp
libs/react-cpp/src/shared/: cleanup.h  interval.h  read.h  signal.h  status.h  synchronize.h  timeout.h  write.h
libs/react-cpp/src/watchers/: cleanup.cpp  interval.cpp  read.cpp  signal.cpp  status.cpp  synchronize.cpp  timeout.cpp  write.cpp
libs/react-cpp/tests/: .gitignore  cancel.cpp  dns.cpp  echo.cpp  idle.cpp  ip.cpp  server.cpp  test.cpp  thread.cpp  worker.cpp
libs/rtaudio/Gist/src/: AccelerateFFT.cpp  AccelerateFFT.h  CMakeLists.txt  CoreFrequencyDomainFeatures.cpp  CoreFrequencyDomainFeatures.h  CoreTimeDomainFeatures.cpp  CoreTimeDomainFeatures.h  Gist.cpp  Gist.h  MFCC.cpp  MFCC.h  OnsetDetectionFunction.cpp  OnsetDetectionFunction.h  WindowFunctions.cpp  WindowFunctions.h  Yin.cpp  Yin.h
libs/rtaudio/Gist/tests/: CMakeLists.txt  Test_CoreFrequencyDomainFeatures.cpp  Test_CoreTimeDomainFeatures.cpp  Test_Gist.cpp  Test_MFCC.cpp  Test_OnsetDetectionFunction.cpp  Test_Pitch.cpp
libs/rtaudio/Gist/tests/test-signals/: Test_Signals.cpp  Test_Signals.h
libs/serialport/: CMakeLists.txt
libs/serialport/include/serial/: serial.h
libs/serialport/include/serial/impl/: unix.h
libs/serialport/src/: serial.cc
libs/serialport/src/impl/: unix.cc
libs/tinyprocess/: CMakeLists.txt  process.cpp  process.hpp  process_unix.cpp
modules/: QCSuper.patch  requirements.txt
scripts/: apply_patches.sh  bt_start_rfcomm.sh  clean_gitlab_artifacts.js  docker_prepare_aarch64_build.sh  docker_release.docker  docker_release_5g.docker  docker_release_desktop.docker  fix_global_config.sh  gen_default_config.sh  gen_patches.sh  git_remove_empty_commits.sh  gitlab_test_ci.sh  inotify-consumers.sh  install_llvm.sh  open5gs-dbctl.sh  packet_hex_to_c_array.py  patch_wireshark_cmake.sh  precommit.sh  python_env.sh  record_perf.sh  reset_usb.sh  run_benchmark.sh  sudo_lldb.sh  test_driver_wifi_rtl8812au.py  test_server.py  test_shared_memory.sh
src/: 5g_fuzzer.cpp  Core.hpp  Fitness.hpp  Framework.hpp  Fuzzing.hpp  GlobalConfig.hpp  Machine.hpp  MiscUtils.hpp  Modules.hpp  ModulesInclude.hpp  ModulesStub.cpp  PCH5G.hpp  PacketLogger.hpp  ParseArgs.hpp  Process.hpp  WDMapper.cpp  WDMapper.h  macpdu2wireshark.c  wdissector.cpp  wdissector.h
src/drivers/shm_interface/: lfbb.h  meson.build  test_injection_4g_lte.py  test_injection_5g_nr.py  wd_shm.c  wd_shm.h  wd_shm_lte_utils.h  wd_shm_nas_utils.h  wd_shm_nr_utils.h
(+191 files in other folders)
